fix background covering all screen

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,7 +31,7 @@ body {
   width: 100%;
   height: 100%;
   background: url("../assets/images/rdr2.jpg");
-  background-repeat: round;
+  background-size: cover;
   position: relative;
   z-index: 0;
 }
